--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">Shopping List</string>
-    <string name="no_shop_lists">You have no shop lists yet</string>
     <string name="shopping_lists_all">All</string>
     <string name="shopping_lists_active">Active</string>
     <string name="shopping_lists_archived">Archived</string>
-    <string name="filter">Filter</string>
+    <string name="shopping_list_filter">Filter</string>
+    <string name="shopping_list_name_hint">Name</string>
+    <string name="shopping_list_items_hint">Enter your tasks here.</string>
+    <string name="no_shopping_lists">There are no shopping lists</string>
 </resources>
